--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <title>Calcu-Pro</title>
 </head>
 <body>
-    <div class="projectname">
+    <header class="projectname">
         <h2>Calculator-Pro</h2>
-    </div>
+    </header>
     <div class="container">
         <div class="calculator dark">
             <div class="theme-toggler active">
@@ -59,21 +59,30 @@
         </div>
     </div>
     <footer>
-        <div class="footer-container">
-            <div class="copyrights footer-text">
-                <p>Copyright &#169; 2022 All Rights Reserved</p>
-            </div>
-            <div class="social-menu">
-                    <ul>
-                        <li><a href="https://www.facebook.com/SamyakKhairnar"><i class="fa-brands fb fa-facebook-f"></i></a></li>
-                        <li><a href="https://twitter.com/SamyakKhairnar"><i class="fa-brands tw fa-twitter"></i></a></li>
-                        <li><a href="https://github.com/SamyakKhairnar"><i class="fa-brands git fa-github"></i></a></li>
-                        <li><a href="https://www.linkedin.com/in/samyakkhairnar/"><i class="fa-brands in fa-linkedin-in"></i></a></li>
-                    </ul>
-            </div>
-            <div class="owner footer-text">
-                <p>Made with <i class="fa-solid heart fa-heart"></i> by <span class="owner-name">Samyak Khairnar</span></p>
-            </div>
+        <div class='footer'>
+            <p>Copyright &#169; 2022 All Rights Reserved</p>
+            <ul class="social-links list-non-bullet">
+                <li class="list-item-inlines">
+                  <a class="links" href="https://www.facebook.com/SamyakKhairnar">
+                    <i class="fa-brands fb fa-facebook-f"></i>
+                  </a>
+                </li>
+                <li class="list-item-inlines">
+                  <a class="links" href="https://twitter.com/SamyakKhairnar">
+                    <i class="fa-brands tw fa-twitter"></i>
+                  </a>
+                </li>
+                <li class="list-item-inlines">
+                  <a class="links" href="https://github.com/SamyakKhairnar">
+                    <i class="fa-brands git fa-github"></i>
+                  </a>
+                </li>
+                <li class="list-item-inlines">
+                  <a class="links" href="https://www.linkedin.com/in/samyakkhairnar/">
+                    <i class="fa-brands in fa-linkedin-in"></i>
+                  </a>
+                </li>
+            </ul>
         </div>
     </footer>
     <script src="script.js"></script>
